# gl_sdl_glew

./: .gitignore  CMakeLists.txt  README.md
include/: app.h  vertex.h
src/: app.cpp  main.cpp
